<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_width_connection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="75dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_width_connection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="75dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle_connection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="376dp" />
    <EditText
        android:id="@+id/email_connection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-100dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:drawableTint="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="@id/middle_connection"
        app:layout_constraintStart_toStartOf="@id/start_width_connection"
        app:layout_constraintEnd_toEndOf="@id/end_width_connection"
        android:hint="@string/username"
        />
    <EditText
        android:id="@+id/password_connection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:inputType="textPassword"
        android:drawableTint="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/email_connection"
        app:layout_constraintStart_toStartOf="@id/start_width_connection"
        app:layout_constraintEnd_toEndOf="@id/end_width_connection"
        android:hint="@string/password"
        />

    <Button
        android:id="@+id/connection_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:text="@string/connect_caps"
        app:layout_constraintTop_toBottomOf="@id/password_connection"
        app:layout_constraintStart_toStartOf="@id/start_width_connection"
        app:layout_constraintEnd_toEndOf="@id/end_width_connection"/>

</androidx.constraintlayout.widget.ConstraintLayout>