<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/create_group_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/create_group_caps"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/create_group_back_arrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_back_arrow"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/create_group_header_divider"/>

    <View
        android:id="@+id/create_group_header_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/create_group_header"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_group_form_start_width"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="75dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_group_form_end_width"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="75dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_group_form_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="281dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name_title_input"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/create_group_groupname_value"
        app:layout_constraintStart_toStartOf="@id/create_group_groupname_value"/>


    <EditText
        android:id="@+id/create_group_groupname_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-100dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:drawableTint="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="@id/create_group_form_start"
        app:layout_constraintStart_toStartOf="@id/create_group_form_start_width"
        app:layout_constraintEnd_toEndOf="@id/create_group_form_end_width"
        android:hint="@string/group_name_title_input"
        />

    <TextView
        android:id="@+id/create_group_add_member_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_member_title_input"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/create_group_groupname_value"
        app:layout_constraintStart_toStartOf="@id/create_group_groupname_value"/>

    <EditText
        android:id="@+id/create_group_add_member_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:drawableTint="@color/white"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/create_group_add_member_label"
        app:layout_constraintStart_toStartOf="@id/create_group_form_start_width"
        app:layout_constraintEnd_toEndOf="@id/create_group_form_end_width"
        android:hint="ex : add@gmail.com"
        />

    <Button
        android:id="@+id/create_group_add_member_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:text="@string/add_member_caps"
        app:layout_constraintTop_toBottomOf="@id/create_group_add_member_value"
        app:layout_constraintStart_toStartOf="@id/create_group_form_start_width"
        app:layout_constraintEnd_toEndOf="@id/create_group_form_end_width"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/create_group_member_recyclerview"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintStart_toStartOf="@id/create_group_form_start_width"
        app:layout_constraintEnd_toEndOf="@id/create_group_form_end_width"
        app:layout_constraintTop_toBottomOf="@id/create_group_add_member_button"
        />

    <Button
        android:id="@+id/create_group_create_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:text="@string/create_group"
        app:layout_constraintTop_toBottomOf="@id/create_group_member_recyclerview"
        app:layout_constraintStart_toStartOf="@id/create_group_form_start_width"
        app:layout_constraintEnd_toEndOf="@id/create_group_form_end_width"/>

</androidx.constraintlayout.widget.ConstraintLayout>