<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/answer_activity_header_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="75dp" />

    <ImageButton
        android:id="@+id/answer_activity_back_arrow_imageButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/answer_activity_header_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_answers"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toEndOf="@id/answer_activity_back_arrow_imageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/answer_activity_header_guideline"
        />

    <View
        android:id="@+id/answer_activity_header_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/answer_activity_header_guideline"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/answer_activity_post_user_avatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@color/black"
        app:cardCornerRadius="50dp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/answer_activity_header_guideline"
        android:layout_marginTop="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_group_icon"
            android:alpha="0.35"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/answer_activity_post_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/answer_activity_post_user_avatar"
        app:layout_constraintTop_toTopOf="@id/answer_activity_post_user_avatar"
        app:layout_constraintBottom_toBottomOf="@id/answer_activity_post_user_avatar"/>

    <TextView
        android:id="@+id/answer_activity_post_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/answer_activity_post_user_avatar"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/answer_activity_post_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#9F9F9F"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/answer_activity_post_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <View
        android:id="@+id/answer_activity_post_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/answer_activity_post_date"
        app:layout_constraintStart_toStartOf="parent"/>



    <TextView
        android:id="@+id/answer_activity_answer_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_answer"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/answer_activity_post_divider"/>

    <EditText
        android:id="@+id/answer_activity_user_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_your_answer"
        android:textColorHint="@color/grey"
        android:textColor="@color/white"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/answer_activity_answer_title" />

    <Button
        android:id="@+id/answer_activity_send_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_caps"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>