<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/group_back_arrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@color/black"
        app:cardCornerRadius="50dp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.35"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back_arrow"/>


    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/group_banner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/black"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_banner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_begin="100dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_right"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="5dp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/add_join_group"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:cardCornerRadius="10dp"
        android:layout_marginRight="5dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="@id/margin_right"
        app:layout_constraintTop_toTopOf="@id/group_groupname">

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/leave_group"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@color/white"/>
        <!-- todo manage leave and delete -->
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/group_groupname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/group_banner"
        app:layout_constraintStart_toStartOf="@id/group_back_arrow"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/group_home_nb_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/group_groupname"
        app:layout_constraintStart_toStartOf="@id/group_back_arrow"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/group_home_nb_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/group_groupname"
        app:layout_constraintStart_toEndOf="@id/group_home_nb_members"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/group_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_home_nb_project"
        android:layout_marginTop="10dp"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/grey"
        android:background="@color/black"
        >

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/projects"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/members"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/group_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_tab_layout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>